<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidKotlinBluetooth</string>
    <string name="openbt">Open Bluetooth</string>
    <string name="makeVisible">Make Bluetooth Visible</string>
    <string name="findDevices">Find Devices</string>

    <!--  Bluetooth Chat Activity -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  Device List Activity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect</string>
    <string name="discoverable">Discover</string>

    <!-- Chat -->
    <string name="chat">Hello</string>
</resources>
