<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_black"
        android:padding="@dimen/padding_ten"
        android:text="@string/title_paired_devices"
        android:textColor="@color/text_white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_three_hundred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_paired_devices" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_fifty"
        android:background="@color/background_black"
        android:padding="@dimen/padding_ten"
        android:text="@string/title_other_devices"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_fifteen"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paired_devices" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_three_hundred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_new_devices" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="@dimen/width_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_twenty"
        android:layout_marginBottom="@dimen/margin_twenty"
        android:background="@drawable/button_shaded_radius_twenty"
        android:text="@string/button_scan"
        android:textSize="@dimen/text_fifteen"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>